--- a/package.json
+++ b/package.json
@@ -4,18 +4,30 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=dev next dev",
+    "pre": "cross-env NODE_ENV=pre next dev",
     "prod": "cross-env NODE_ENV=prod next dev",
     "build": "next build",
+    "buildTest": "cross-env NODE_ENV=dev next build",
+    "buildPre": "cross-env NODE_ENV=pre next build",
+    "buildProd": "cross-env NODE_ENV=prod next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@arco-design/web-react": "^2.55.0",
+    "@nextui-org/react": "^2.2.9",
     "axios": "^1.6.0",
+    "cheerio": "^1.0.0-rc.12",
+    "framer-motion": "^10.16.5",
     "next": "13.5.6",
+    "next-sitemap": "^4.2.3",
     "query-string": "^8.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-intersection-observer": "^9.5.3",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
